crates/fluvio-connector-common/ui-test/ui/config_use_reserved_name_fluvio.stderr
error: Custom config name conflicts with reserved names: 'meta' and 'transforms'
 --> ui-test/ui/config_use_reserved_name_fluvio.rs:7:1
  |
7 | struct CustomConfig {}
  | ^^^^^^

error[E0412]: cannot find type `CustomConfig` in this scope
 --> ui-test/ui/config_use_reserved_name_fluvio.rs:4:27
  |
4 | async fn start_fn(config: CustomConfig, producer: ()) {}
  |                           ^^^^^^^^^^^^ not found in this scope

error[E0433]: failed to resolve: use of undeclared type `CustomConfig`
 --> ui-test/ui/config_use_reserved_name_fluvio.rs:4:27
  |
4 | async fn start_fn(config: CustomConfig, producer: ()) {}
  |                           ^^^^^^^^^^^^ use of undeclared type `CustomConfig`

error[E0308]: mismatched types
 --> ui-test/ui/config_use_reserved_name_fluvio.rs:3:1
  |
3 | #[connector(source)]
  | ^^^^^^^^^^^^^^^^^^^^ expected `()`, found `TopicProducer<SpuSocketPool>`
4 | async fn start_fn(config: CustomConfig, producer: ()) {}
  |          -------- arguments to this function are incorrect
  |
  = note: expected unit type `()`
                found struct `fluvio::producer::TopicProducer<fluvio::spu::SpuSocketPool>`
note: function defined here
 --> ui-test/ui/config_use_reserved_name_fluvio.rs:4:10
  |
4 | async fn start_fn(config: CustomConfig, producer: ()) {}
  |          ^^^^^^^^                       ------------
  = note: this error originates in the attribute macro `connector` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> ui-test/ui/config_use_reserved_name_fluvio.rs:3:1
  |
3 | #[connector(source)]
  | ^^^^^^^^^^^^^^^^^^^^
  | |
  | expected `()`, found `Result<_, _>`
  | this expression has type `()`
  |
  = note: expected unit type `()`
                  found enum `Result<_, _>`
  = note: this error originates in the attribute macro `connector` (in Nightly builds, run with -Z macro-backtrace for more info)
